--- a/Labs/Lab-1/BankAccounts/CMakeLists.txt
+++ b/Labs/Lab-1/BankAccounts/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 23)
 SET(CMAKE_CXX_FLAGS -pthread)
 
 
-add_executable(BankAccounts main.cpp Model/BankAccount.cpp Model/BankAccount.h Model/OperationLog.cpp Model/OperationLog.h Model/Operation.cpp Model/Operation.h Repository/BankAccountRepository.cpp Repository/BankAccountRepository.h Repository/Repository.cpp Repository/Repository.h Model/Model.h Model/BankDetailsState.cpp Model/BankDetailsState.h Service/BankService.cpp Service/BankService.h)
+add_executable(BankAccounts main.cpp Model/BankAccount.cpp Model/BankAccount.h Model/OperationLog.cpp Model/OperationLog.h Model/Operation.cpp Model/Operation.h Repository/BankAccountRepository.cpp Repository/BankAccountRepository.h Model/Model.h Model/BankDetailsState.cpp Model/BankDetailsState.h Service/BankService.cpp Service/BankService.h UI/BankUI.cpp UI/BankUI.h)
