--- a/Labs/Lab-5/Karatsuba's Algorithm/CMakeLists.txt
+++ b/Labs/Lab-5/Karatsuba's Algorithm/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(Karatsuba_s_Algorithm)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS -pthread)
 
-add_executable(Karatsuba_s_Algorithm main.cpp Polynomial.cpp Polynomial.h PolynomialArithmetic.cpp PolynomialArithmetic.h)
+add_executable(Karatsuba_s_Algorithm main.cpp Polynomial.cpp Polynomial.h PolynomialArithmetic.cpp PolynomialArithmetic.h ThreadPool.h)
